# Teachi

./: .gitignore  README.md  nginx.conf  package-lock.json  project_introduction.md  pyproject.toml  test_asyncio.py  test_asyncio2.py  test_pydantic_ai.py  test_start_event.py
backend/: admin.py  auth.py  community.py  config.py  context.py  data.py  db.py  db_dep.py  file.py  library.py  logging.py  loop.py  main.py  node.py  registration_service.py  seatable_client.py  settings.py  skill_parser.py  tool.py  transfer.py
backend/community/: __init__.py  admin.py  library.py  routes.py  utils.py
backend/config/: __init__.py  app.py  auth.py  community.py  env.py  loop.py  model.py  paths.py  seatable.py  skill.py
docs/backend/: README.md  api.md  cancellation_and_error_handling.md  improvements.md  security-audit.md
docs/community/: architecture.md  dbdesign.md  execution_plan.md
docs/frontend/: README.md  performance_optimization.md  scroll_node_chain_preview.html
docs/maintenance/: README.md
docs/seatable/: README.md
frontend/: index.html  package-lock.json  package.json  prototype.html  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  skills.ts  style.css  (+1 more)
future/: improvements.md  performance-improvements.md  security-audit.md
scripts/: add_user.py  clean_library.py  cleanup_orphans.py  community_test.py  fix_database.py  migrate_legacy_db.py  migrate_versions.py  patch_db.py  seed_library.py  set_admin.py
tests/: conftest.py  test_attachments_api.py  test_community_zip_upload.py  test_migrate_legacy_db.py  test_settings.py
(+65 files in other folders)
