[project]
name = "Teachi"
version = "0.0.1"
description = "AI assistant for study.Explore studying ways in AI Era."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "pydantic-ai>=1.71.0",
    "pydantic-ai-skills>=0.6.0",
    "uv>=0.11.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
